--- a/getcreations.html
+++ b/getcreations.html
@@ -26,44 +26,34 @@
     <div id="output">Loading...</div>
 
     <script>
-        // Function to fetch the list of files
         async function fetchFiles() {
-            const folderUrl = 'https://strich.org/community-creations/'; // URL of the folder
-
+            const apiUrl = 'https://api.github.com/repos/weshalb/strich/git/trees/main?recursive=1';
             try {
-                const response = await fetch(folderUrl);
+                const response = await fetch(apiUrl);
                 if (!response.ok) throw new Error('Network response was not ok');
 
-                const text = await response.text();
-                const parser = new DOMParser();
-                const doc = parser.parseFromString(text, 'text/html');
+                const data = await response.json();
+                const files = data.tree
+                    .filter(item => item.path.endsWith('.png'))
+                    .map(item => item.path.split('/').pop());
 
-                // Find all links and extract their file names
-                const fileLinks = Array.from(doc.querySelectorAll('a'))
-                    .map(a => a.href)
-                    .map(href => href.split('/').pop())
-                    .filter(name => name.endsWith('.png')); // Adjust filter if needed
-
-                return fileLinks;
+                return files;
             } catch (error) {
                 console.error('Error fetching files:', error);
                 return [];
             }
         }
 
-        // Function to handle the request
         async function handleRequest() {
             const fileNames = await fetchFiles();
-            
+
             // Check for the 'json' query parameter
             const params = new URLSearchParams(window.location.search);
             if (params.has('json')) {
                 // Respond with JSON if 'json' query parameter is present
-                const outputDiv = document.getElementById('output');
-                outputDiv.innerHTML = `<pre>${JSON.stringify(fileNames, null, 2)}</pre>`;
+                document.getElementById('output').innerHTML = `<pre>${JSON.stringify(fileNames, null, 2)}</pre>`;
             } else {
                 // Otherwise, display the list in the HTML page
-                const outputDiv = document.getElementById('output');
                 if (fileNames.length > 0) {
                     const fileList = document.createElement('ul');
                     fileNames.forEach(fileName => {
@@ -71,10 +61,10 @@
                         li.textContent = fileName;
                         fileList.appendChild(li);
                     });
-                    outputDiv.innerHTML = ''; // Clear loading message
-                    outputDiv.appendChild(fileList);
+                    document.getElementById('output').innerHTML = ''; // Clear loading message
+                    document.getElementById('output').appendChild(fileList);
                 } else {
-                    outputDiv.innerHTML = 'No files found or there was an error fetching the files.';
+                    document.getElementById('output').innerHTML = 'No files found or there was an error fetching the files.';
                 }
             }
         }
