--- a/test1.html
+++ b/test1.html
@@ -8,8 +8,7 @@
     <!-- Open Graph Meta-Tags -->
     <meta property="og:title" content="Willkommen auf meiner Website">
     <meta property="og:description" content="Dies ist eine Beispielseite, die zeigt, wie man Open Graph Meta-Tags verwendet.">
-    <meta property="og:url" content="https://deine-website.de">
-    <meta property="og:image" content="https://deine-website.de/vorschaubild.jpg">
+    <meta property="og:url" content="https://strich.org/test1">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Meine Beispielseite">
     <meta property="og:image:width" content="1200">
