--- a/test1.html
+++ b/test1.html
@@ -6,11 +6,11 @@
     <title>Meine Beispielseite</title>
 
     <!-- Open Graph Meta-Tags -->
-    <meta property="og:title" content="Willkommen auf meiner Website">
-    <meta property="og:description" content="Dies ist eine Beispielseite, die zeigt, wie man Open Graph Meta-Tags verwendet.">
+    <meta property="og:title" content="Look EBK">
+    <meta property="og:description" content="I can make fucking ambeds now">
     <meta property="og:url" content="https://strich.org/test1">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Meine Beispielseite">
+    <meta property="og:site_name" content="balls">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
