--- a/test1.html
+++ b/test1.html
@@ -7,7 +7,7 @@
 
     <!-- Open Graph Meta-Tags -->
     <meta property="og:title" content="Look EBK">
-    <meta property="og:description" content="I can make fucking ambeds now">
+    <meta property="og:description" content="I can make fucking embeds now">
     <meta property="og:url" content="https://strich.org/test1">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="balls">
