--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine Beispielseite</title>
+    <title>lol</title>
 
     <!-- Open Graph Meta-Tags -->
     <meta property="og:title" content="Look EBK">
@@ -35,8 +35,8 @@
     </style>
 </head>
 <body>
-    <h1>Willkommen auf meiner Beispielseite</h1>
-    <p>Dies ist eine einfache Webseite, die Open Graph Meta-Tags verwendet, um Link-Embeds auf Plattformen wie Discord zu erstellen.</p>
+    <h1>WLook EBK</h1>
+    <p>I can make fucking embeds now</p>
     <img src="https://deine-website.de/vorschaubild.jpg" alt="Vorschaubild" width="600">
 </body>
 </html>
