--- a/test1.html
+++ b/test1.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>WLook EBK</h1>
+    <h1>Look EBK</h1>
     <p>I can make fucking embeds now</p>
     <img src="https://deine-website.de/vorschaubild.jpg" alt="Vorschaubild" width="600">
 </body>
