--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta-Tags -->
     <meta property="og:title" content="Look EBK">
     <meta property="og:description" content="I can make fucking embeds now">
-    <meta property="og:url" content="https://strich.org/test1">
+    <meta property="og:url" content="https://strich.org/test">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="balls">
     <meta property="og:image:width" content="1200">
