--- a/klausi/index.html
+++ b/klausi/index.html
@@ -18,6 +18,6 @@
   <h2>Preview</h2>
   <pre id="output"></pre>
   
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
